--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ services:
 
 install: wget -qO - https://github.com/Slamdunk/travis-scripts/raw/master/php-install.sh | sh
 
-script: wget -qO - https://github.com/Slamdunk/travis-scripts/raw/master/php-script.sh | sh
+script:
+  - wget -qO - https://github.com/Slamdunk/travis-scripts/raw/master/php-script.sh | sh
+  - echo "SHOW DATABASES" | ./mysql --host 127.0.0.1 --user root
 
 notifications:
   email: false
