--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,9 @@ cache:
 services:
   - mysql
 
-install: wget -qO - https://github.com/Slamdunk/travis-scripts/raw/master/php-install.sh | sh
-
 script:
-  - wget -qO - https://github.com/Slamdunk/travis-scripts/raw/master/php-script.sh | sh
-  - echo "SHOW TABLES" | ./mysql --host 127.0.0.1 --user root --database information_schema
+  - printenv
+  - php -i
 
 notifications:
   email: false
