--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -5,8 +5,6 @@ on:
   push:
     branches:
       - "master"
-  schedule:
-    - cron: '0 3 3 * *'
 
 jobs:
   composer-json-lint:
@@ -17,25 +15,26 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
+          - "8.1"
 
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v3"
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
           coverage: "none"
           php-version: "${{ matrix.php-version }}"
+          ini-values: zend.assertions=1,error_reporting=-1
           tools: composer-normalize, composer-require-checker, composer-unused
 
       - name: "Get composer cache directory"
-        id: composercache
+        id: "composercache"
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: "Cache dependencies"
-        uses: actions/cache@v2
+        uses: "actions/cache@v3"
         with:
           path: ${{ steps.composercache.outputs.dir }}
           key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-${{ hashFiles('**/composer.json') }}
@@ -64,96 +63,39 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
           - "8.0"
+        code-coverage:
+          - "none"
+        include:
+            - php-version: "8.1"
+              code-coverage: "pcov"
 
     services:
       mysql:
-        image: mysql:5.7
+        image: mariadb:latest
         env:
-          MYSQL_ROOT_PASSWORD: 'root_password'
+          MARIADB_ROOT_PASSWORD: 'root_password'
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --health-cmd="mariadb-admin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v3"
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
-          coverage: "none"
-          php-version: "${{ matrix.php-version }}"
-          ini-values: zend.assertions=1
+          coverage: ${{ matrix.code-coverage }}
+          php-version: ${{ matrix.php-version }}
+          ini-values: zend.assertions=1,error_reporting=-1
 
       - name: "Get composer cache directory"
-        id: composercache
+        id: "composercache"
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: "Cache dependencies"
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.composercache.outputs.dir }}
-          key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-${{ hashFiles('**/composer.json') }}
-          restore-keys: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-
-
-      - name: "Install highest dependencies"
-        if: ${{ matrix.php-version != '8.0' }}
-        run: "composer update --no-interaction --no-progress"
-
-      - name: "Install highest dependencies PHP 8.0"
-        if: ${{ matrix.php-version == '8.0' }}
-        run: "composer update --no-interaction --no-progress --ignore-platform-reqs"
-
-      - name: "Wait for MySQL to be ready"
-        run: |
-          until mysql --host=127.0.0.1 --port=3306 --user=root --password=root_password &> /dev/null
-          do
-            printf "."
-            sleep 1
-          done
-
-      - name: "Run tests"
-        timeout-minutes: 3
-        run: "vendor/bin/phpunit --no-coverage --no-logging"
-
-  code-coverage:
-    name: "Code Coverage"
-
-    runs-on: "ubuntu-latest"
-
-    strategy:
-      matrix:
-        php-version:
-          - "7.4"
-
-    services:
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ROOT_PASSWORD: 'root_password'
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
-    steps:
-      - name: "Checkout"
-        uses: "actions/checkout@v2"
-
-      - name: "Install PHP"
-        uses: "shivammathur/setup-php@v2"
-        with:
-          coverage: "pcov"
-          php-version: "${{ matrix.php-version }}"
-          ini-values: zend.assertions=1
-
-      - name: "Get composer cache directory"
-        id: composercache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-      - name: "Cache dependencies"
-        uses: actions/cache@v2
+        uses: "actions/cache@v3"
         with:
           path: ${{ steps.composercache.outputs.dir }}
           key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-${{ hashFiles('**/composer.json') }}
@@ -171,11 +113,18 @@ jobs:
           done
 
       - name: "Run tests"
-        timeout-minutes: 3
-        run: "vendor/bin/phpunit --coverage-clover=coverage.xml"
+        if: ${{ matrix.code-coverage == 'none' }}
+        timeout-minutes: 1
+        run: "vendor/bin/phpunit --no-coverage --no-logging"
+
+      - name: "Run tests"
+        if: ${{ matrix.code-coverage != 'none' }}
+        timeout-minutes: 1
+        run: "vendor/bin/phpunit --coverage-clover=coverage.xml --coverage-xml=coverage/coverage-xml --log-junit=coverage/junit.xml"
 
       - name: "Send code coverage report to Codecov.io"
-        uses: codecov/codecov-action@v1
+        if: ${{ matrix.code-coverage != 'none' }}
+        uses: codecov/codecov-action@v2.1.0
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
@@ -189,24 +138,25 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
+          - "8.1"
 
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v3"
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
           coverage: "none"
-          php-version: "${{ matrix.php-version }}"
+          php-version: ${{ matrix.php-version }}
+          ini-values: zend.assertions=1,error_reporting=-1
 
       - name: "Get composer cache directory"
-        id: composercache
+        id: "composercache"
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: "Cache dependencies"
-        uses: actions/cache@v2
+        uses: "actions/cache@v3"
         with:
           path: ${{ steps.composercache.outputs.dir }}
           key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-${{ hashFiles('**/composer.json') }}
@@ -215,7 +165,7 @@ jobs:
       - name: "Install dependencies"
         run: "composer update --no-interaction --no-progress"
 
-      - name: "Check coding standards"
+      - name: "Run PHP-CS-Fixer"
         run: "vendor/bin/php-cs-fixer fix --verbose --dry-run --diff"
 
   static-analysis:
@@ -226,17 +176,18 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
+          - "8.1"
 
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v3"
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
           coverage: "none"
           php-version: "${{ matrix.php-version }}"
+          ini-values: zend.assertions=1,error_reporting=-1
           tools: cs2pr
 
       - name: "Get composer cache directory"
