--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-.idea/
-tmp/
-vendor/
-.php-cs-fixer.cache
-.phpunit.result.cache
-composer.lock
-phpunit.xml
+/.idea/
+/.phpunit.cache/
+/vendor/
+/coverage/
+/tmp/
+/.php-cs-fixer.cache
+/.phpunit.result.cache
+/composer.lock
