--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "slam/mysql-php",
     "description": "PHP version of mysql cli that comes with MySQL",
     "license": "MIT",
+    "type": "library",
     "keywords": [
         "mysql"
     ],
@@ -16,11 +17,11 @@
         "ext-mysqli": "*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.14.4",
-        "phpstan/phpstan": "^1.10.1",
-        "phpstan/phpstan-phpunit": "^1.3.7",
-        "phpstan/phpstan-strict-rules": "^1.5.0",
-        "phpunit/phpunit": "^10.0.11"
+        "friendsofphp/php-cs-fixer": "^3.35.1",
+        "phpstan/phpstan": "^1.10.39",
+        "phpstan/phpstan-phpunit": "^1.3.15",
+        "phpstan/phpstan-strict-rules": "^1.5.1",
+        "phpunit/phpunit": "^10.4.1"
     },
     "autoload": {
         "psr-4": {
